Alteração e correção do pedido-service